--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "canonicalizer",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Provides singular and plural forms of nouns.",
   "main": "canonicalizer.js",
   "scripts": {
@@ -17,7 +17,7 @@
     "nouns",
     "language",
     "pluralization",
-    "canonicaliztion"
+    "canonicalization"
   ],
   "author": "Jim Kang",
   "license": "MIT",
